Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ text-decoration: none;
 
 .project {
     background-color: aliceblue;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 1rem;
 }
 
